...
              <Clerk.Input />
            </Clerk.Field>
            <SignIn.Action
              submit
              asChild
            >
              <Button>Continue</Button>
            </SignIn.Action>
            <div className='rounded-xl bg-neutral-100 p-5'>
              <p className='mb-4 text-center text-sm/5 text-neutral-500'>Alternatively, sign in with these platforms</p>
              <div className='space-y-2'>
                <Clerk.Connection
                  name='google'
...
          </SignIn.Step>
          <SignIn.Step
            name='forgot-password'
            className='w-full space-y-6 rounded-2xl bg-white px-4 py-10 sm:w-96 sm:px-8'
          >
            <header className='text-center'>
              <h1 className='text-xl font-medium tracking-tight text-neutral-950'>Forgot password?</h1>
            </header>
            <Clerk.GlobalError className='block text-sm text-red-600' />
            <SignIn.SupportedStrategy
              asChild
              name='reset_password_email_code'
            >
...
          <SignIn.Step
            name='verifications'
            className='w-full space-y-6 rounded-2xl bg-white px-4 py-10 sm:w-96 sm:px-8'
          >
            <SignIn.Strategy name='password'>
              <header className='text-center'>
                <h1 className='text-xl font-medium tracking-tight text-neutral-950'>Enter your password</h1>
                <p className='mt-2 text-sm text-neutral-500'>
                  Welcome back <SignIn.Salutation />
                </p>
              </header>
              <Clerk.GlobalError className='block text-sm text-red-600' />
              <Clerk.Field
...
